# MSci-Project

./: README.md  compy  copmy  frames.gv  params.yaml
KingsTemplate/: informatics-report.cls  report.aux  report.bbl  report.fdb_latexmk  report.fls  report.tex  report.toc
KingsTemplate/Appendices/: SourceCode.aux  SourceCode.fdb_latexmk  SourceCode.fls  SourceCode.tex  UserGuide.aux  UserGuide.fdb_latexmk  UserGuide.fls  UserGuide.tex  appendix.aux
KingsTemplate/Chapters/: Background.aux  Background.fdb_latexmk  Background.fls  Background.tex  Body.aux  Conclusion.aux  Conclusion.fdb_latexmk  Conclusion.fls  Conclusion.tex  DesignSpecification.aux  DesignSpecification.fdb_latexmk  DesignSpecification.fls  DesignSpecification.tex  Evaluation.aux  Evaluation.fdb_latexmk  Evaluation.fls  Evaluation.tex  Implementation.aux  Implementation.fdb_latexmk  Implementation.fls  Implementation.tex  ProfessionalIssues.aux  ProfessionalIssues.fdb_latexmk  ProfessionalIssues.fls  ProfessionalIssues.tex  Testing.aux  Testing.tex
KingsTemplate/FrontMatter/: abstract.tex  acknowledgements.tex
Msci Project/: progressReport.aux  progressReport.fdb_latexmk  progressReport.fls  progressReport.tex  project.aux  project.fdb_latexmk  project.fls  project.tex  project.toc  project2.aux  project2.blg  project2.fdb_latexmk  project2.fls  project2.tex  project2.toc
devel/: .catkin  .rosinstall  setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/msci_project/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/lib/controller/: controller  serverToController
devel/lib/my_odom/: my_odom
devel/lib/my_sensor/: my_sensor
devel/lib/pkgconfig/: MsciProject.pc  beginner_tutorials.pc  controller.pc  msciProject.pc  msci_project.pc  my_odom.pc  my_robot_name_2dnav.pc  my_sensor.pc  robot.pc  robot1.pc  robot1_tf.pc  robot2.pc  robot2_tf.pc  robot_setup_tf.pc  simple_layers.pc
devel/lib/robot1_tf/: connect_to_server  goal_reacher  laser_cloud  laser_scan  my_listener  my_odom  my_sensor  pose_publisher  tf_broadcaster  tf_listener
devel/lib/robot2_tf/: connect_to_server2  goal_reacher2  laser_cloud2  laser_scan2  my_listener2  my_odom2  my_sensor2  pose_publisher2  tf_broadcaster2  tf_listener2
devel/lib/robot_setup_tf/: base_controller  connect_to_server  goal_reacher  laser_scan  my_listener  my_odom  pose_publisher  tf_broadcaster  tf_listener
devel/lib/simple_layers/: robotPosition
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake  (+1 more)
install/: _setup_util.py  setup.sh
install/lib/pkgconfig/: beginner_tutorials.pc  robot1_tf.pc  robot2.pc  robot2_tf.pc
install/share/beginner_tutorials/: package.xml
install/share/robot1/: package.xml
install/share/robot1_tf/: package.xml
install/share/robot2/: package.xml
java_GUI/: BellmanFord.java  CommandObject.java  CommandObserver.java  Connector.java  Dialogue.java  GUI.java  GuiDialog.java  GuiHider.java  GuiUser.java  Listener.java  Observable.java  Robot.java  RobotRenderer.java  treasures
java_GUI/GUI Class/: CommandObject.java  GuiUser.java  Listener.java  Manifest.txt  mapTimes  treasures
java_GUI/Hider Class/: Connector.java  Hider.java  Manifest.txt
java_GUI/ROS Source Files/: map1.yaml
java_GUI/ROS Source Files/Robot/: global_costmap_params 2.yaml  global_costmap_params.yaml  local_costmap_params 2.yaml  package.xml
java_GUI/ROS Source Files/Robot/launch/: frames.gv  launch_robot.launch
java_GUI/ROS Source Files/controller/: package.xml
java_GUI/ROS Source Files/robot2_tf/: CMakeLists.txt
java_GUI/executables/GuiUser/: Dialogue.java  DialogueText
java_GUI/executables/Hider/: treasures
java_server/: AutoClient.java  Client.java  ClientThread.java  Commands.java  DumbClient.java  Server.java  ServerCleanup.java  ServerThread.java  States.java  Types.java
src/Robot/: CMakeLists.txt  Robot.workspace  Robot.workspace.session  global_costmap_params.yaml  local_costmap_params.yaml  minimal.yaml
src/Robot/launch/: launch_robot.launch  launch_robot.launch~  move_base.launch~
src/Robot1/: CMakeLists.txt
src/Robot1/launch/: Untitled Document  launch_robot.launch  move_base.launch
src/Robot2/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params 2.yaml  global_costmap_params.yaml  local_costmap_params 2.yaml  local_costmap_params.yaml
src/Robot2/launch/: launch_robot.launch
src/Robot2/src/: grid_layer.cpp
src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~
src/byTheBook/: manifest.xml
src/controller/: CMakeLists.txt
src/controller/src/: controller.cpp  serverToController.cpp
src/msci_project/: CMakeLists.txt  CMakeLists.txt~  map1  package.xml  package.xml~
src/msci_project/scripts/: map.py  map.py~  map1~  robot.py  robot.py~  robot_class.py  robot_spawn.py  wallReader.py
src/my_robot_name_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  local_costmap_params.yaml  package.xml
src/my_robot_name_2dnav/launch/: launch_robot.launch
src/my_sensor/: CMakeLists.txt  CMakeLists.txt~
src/my_sensor/src/: laser_cloud.cpp  my_sensor.cpp
src/robot1_tf/: CMakeLists.txt  CMakeLists.txt~
src/robot1_tf/src/: connect_to_server.cpp  laser_cloud.cpp  my_odom.cpp  pose_publisher.cpp  tf_broadcaster.cpp
src/robot2_tf/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/robot2_tf/my_odom/: CMakeLists.txt~
src/robot2_tf/src/: goal_reacher2.cpp  grid_layer.cpp  laser_cloud2.cpp  laser_scan2.cpp  my_listener2.cpp  my_odom2.cpp  my_sensor2.cpp  pose_publisher2.cpp  social.cpp  static_transform_publisher2.cpp  tf_broadcaster2.cpp  tf_listener2.cpp
src/robot_setup_tf/: CMakeLists.txt  package.xml
src/robot_setup_tf/my_odom/: CMakeLists.txt
src/robot_setup_tf/sensor_msgs/: LaserScan.msg
src/robot_setup_tf/src/: connect_to_server.cpp  goal_reacher.cpp  my_listener.cpp  my_odom.cpp  tf_broadcaster.cpp  tf_listener.cpp
src/simple_layers/: CMakeLists.txt  package.xml
src/simple_layers/src/: grid_layer.cpp  robotPosition.cpp
(+35 files in other folders)
