<?xml version="1.0"?>
<package>
  <name>robot2_tf</name>
  <version>0.0.0</version>
  <description>The robot_setup_tf package</description>
  <maintainer email="maciejm@todo.todo">maciejm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>string</build_depend>
  <build_depend>iostream</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>string</run_depend>
  <run_depend>iostream</run_depend>

  <export>
  </export>
</package>