<?xml version="1.0"?>
<package>
  <name>robot</name>
  <version>0.0.0</version>
  <description>Second robot package.</description>

  <maintainer email="maciejm@todo.todo">maciejm</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>my_odom</build_depend>
  <build_depend>my_sensor</build_depend>
  <build_depend>robot_setup_tf</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>my_odom</run_depend>
  <run_depend>my_sensor</run_depend>
  <run_depend>robot_setup_tf</run_depend>


  <export>

  </export>
</package>